<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pink_button"
        android:background="@color/pink500"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_button"
        android:background="@color/green500"
        android:layout_below="@id/button1"
        android:layout_toRightOf="@id/button1"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow_button"
        android:background="@color/yellow500"
        android:layout_below="@id/button2"
        android:layout_toRightOf="@id/button2"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purple_button"
        android:background="@color/purple500"
        android:layout_below="@id/button3"
        android:layout_toRightOf="@id/button3"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue500"
        android:layout_below="@id/button4"
        android:layout_toLeftOf="@id/button4"
        android:text="@string/blue_button" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange500"
        android:layout_below="@id/button5"
        android:layout_toLeftOf="@id/button5"
        android:text="@string/orange_button" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red500"
        android:layout_below="@id/button6"
        android:layout_toLeftOf="@id/button6"
        android:text="@string/red_button" />
</RelativeLayout>